# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: diff-test.yml  test.yml
gen_diff/: core.py  format_check.py  generate_diff.py  main.py
gen_diff/formaters/: js.py  plain.py  stylish.py
gen_diff/scripts/: diff.py
gendiff/: __init__.py  cli.py  compare_files.py  core.py  create_diff.py  diff.py  format_check.py  generate_diff.py  generate_tree.py  main.py  parser.py
gendiff/formaters/: format_check.py  plain.py  stylish.py
gendiff/scripts/: core.py  diff.py
tests/: test_diff.py  test_json.py
tests/fixtures/: expected.txt  expected2.txt  expected3 copy.txt  expected5.txt  file3 copy.json  res_json.txt
